methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:4: error: ')' expected but ';' found.
def isFacingTrail():Boolean = {while ((getCouleurSol();)==Color.green)&&(!(estSurBiscuit) {if !(estFaceMur();) {avance();}
                                                      ^SlugTracking:4: error: illegal start of statement
def isFacingTrail():Boolean = {while ((getCouleurSol();)==Color.green)&&(!(estSurBiscuit) {if !(estFaceMur();) {avance();}
                                                       ^